Optimizadas las imagenes, agregado noticias y detalles.

--- a/netos/nosotros.html
+++ b/netos/nosotros.html
@@ -105,7 +105,7 @@
                             <div class="col s12 m6 l3">
                                 <div class="icon-block">
                                     <h2 class="center grey-text darken-4"><i class="material-icons">verified_user</i></h2>
-                                    <p>En nuestras operaciones se garantiza la seguridad de nuestros trabajadores, colaboradores y clientes.dores, colaboradores y clientes.</p>
+                                    <p>En nuestras operaciones se garantiza la seguridad de nuestros trabajadores, colaboradores y clientes.</p>
                                 </div>
                             </div>
                         </div>
