Mejoras graficas en Noticias

--- a/netos/index.html
+++ b/netos/index.html
@@ -5,7 +5,28 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0"/>
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>NETOS S.A.</title>
-    
+    <!--
+        ─────────▄──────────────▄
+        ────────▌▒█───────────▄▀▒▌
+        ────────▌▒▒▀▄───────▄▀▒▒▒▐
+        ───────▐▄▀▒▒▀▀▀▀▄▄▄▀▒▒▒▒▒▐
+        ─────▄▄▀▒▒▒▒▒▒▒▒▒▒▒█▒▒▄█▒▐
+        ───▄▀▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▀██▀▒▌
+        ──▐▒▒▒▄▄▄▒▒▒▒▒▒▒▒▒▒▒▒▒▀▄▒▒▌
+        ──▌▒▒▐▄█▀▒▒▒▒▄▀█▄▒▒▒▒▒▒▒█▒▐
+        ─▐▒▒▒▒▒▒▒▒▒▒▒▌██▀▒▒▒▒▒▒▒▒▀▄▌
+        ─▌▒▀▄██▄▒▒▒▒▒▒▒▒▒▒▒░░░░▒▒▒▒▌
+        ─▌▀▐▄█▄█▌▄▒▀▒▒▒▒▒▒░░░░░░▒▒▒▐
+        ▐▒▀▐▀▐▀▒▒▄▄▒▄▒▒▒▒▒░░░░░░▒▒▒▒▌
+        ▐▒▒▒▀▀▄▄▒▒▒▄▒▒▒▒▒▒░░░░░░▒▒▒▐
+        ─▌▒▒▒▒▒▒▀▀▀▒▒▒▒▒▒▒▒░░░░▒▒▒▒▌
+        ─▐▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▐
+        ──▀▄▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▄▒▒▒▒▌
+        ────▀▄▒▒▒▒▒▒▒▒▒▒▄▄▄▀▒▒▒▒▄▀
+        ───▐▀▒▀▄▄▄▄▄▄▀▀▀▒▒▒▒▒▄▄▀
+        ──▐▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▀▀
+                    Such Head, very wow
+    -->
     <meta name="description" content="Soluciones operacionales a distintas áreas industriales, enfocados principalemente en el rubro minero">
     <meta name="keywords" content="Minería, Tecnología, Industria, Minero, Desarrollo, Innovación, Investigación, Empresa, NETOS">
     <meta name="author" content="NETOS S.A.">
@@ -201,7 +222,7 @@
                 <div class="col s12 center-align">
                     <div class="icon-block">
                         <h3 class="center">Ultimas noticias</h3>
-                        <h2 class="center grey-text darken-4"><i class="material-icons">description</i></h2>
+                        <h2 class="center grey-text darken-4"><i class="material-icons">whatshot</i></h2>
                     </div>
                 </div>
                 <div class="col s12 l4 center-align">
@@ -216,7 +237,6 @@
                             <span class="card-title grey-text text-darken-4"><i class="material-icons right">close</i></span>
                             <p class="description">En pos de buscar nuevas posibilidades de desarrollos para la industria en el área de procesamiento de minerales, específicamente en el proceso de flotación, el Departamento de Procesos de la empresa NETOS asistió al seminario "POSITRON VISUALIZATION OF FLOTATION PARTICLES AND LIQUID TO VALIDATE CFD MODELS".</p>
                             <p class="description">Este seminario se llevó a cabo el pasado mes de enero en las dependencias del departamento de Ingeniería Química y Ambiental de la Universidad Técnica Federico Santa María.</p>
-                            <a class="waves-effect waves-light btn cyan lighten-2 grey-text text-darken-4 z-depth-0" href="#!">Seguir leyendo</a>
                         </div>
                     </div>
                 </div>
@@ -232,7 +252,6 @@
                             <span class="card-title grey-text text-darken-4"><i class="material-icons right">close</i></span>
                             <p class="description">El día 20 de enero de 2016, los profesionales de la empresa se reunieron con Ingenieros de la Universidad Técnica Federico Santa María en el marco de las actividades que se están desarrollando en el Proyecto Voucher de Innovación que la empresa se adjudicó en el mes de septiembre de 2015.</p>
                             <p class="description">Dentro de los objetivos del proyecto está el fomento de la vinculación Empresa-Universidad para poder disminuir la brecha que existe entre la oferta de servicios de proveedores en el ámbito de la innovación tecnológica, con las necesidades de las empresas.</p>
-                            <a class="waves-effect waves-light btn orange lighten-1 grey-text text-darken-4 z-depth-0" href="#!">Seguir leyendo</a>
                         </div>
                     </div>
                 </div>
@@ -248,17 +267,18 @@
                             <span class="card-title grey-text text-darken-4"> <i class="material-icons right">close</i></span>
                             <p class="description">Javier Inostroza, Ingeniero Civil Metalúrgico perteneciente al área de Procesos de Netos S.A., participó como expositor en la octava versión del Congreso de Revestimientos de Molinos. El cual se llevó a cabo los días 7 y 8 de Mayo en el Hotel Sheraton Miramar de Viña del Mar, Chile. </p>
                             <p class="description">En este congreso se expuso a la comunidad minera el trabajo denominado “Estimación en Línea del Nivel de Llenado de Bolas JB y Nivel de Llenado de Carga Jc en un Molino Rotatorio”.</p>
-                            <a class="waves-effect waves-light btn cyan lighten-2 grey-text text-darken-4 z-depth-0" href="#!">Seguir leyendo</a>
                         </div>
                     </div>
                 </div>
-                <div class="col s12 l12">
-                    <a class="waves-effect waves-light btn light-green grey-text text-darken-4 z-depth-0" style="width: 100%;" href="#!">Mas noticias</a>
+                <div class="col s12 center-align">
+                    <a class="waves-effect waves-light btn light-green grey-text text-darken-4 z-depth-0" style="max-width: 300px;" href="noticias.html">Mas noticias</a>
                 </div>
             </div>
         </div>
     </section>
-
+    <br>
+    <div class="divider"></div>
+    <br>
     <footer class="page-footer grey darken-1">
         <div class="row">
             <div class="col l5 hide-on-med-and-down">
