--- a/netos/nosotros.html
+++ b/netos/nosotros.html
@@ -92,7 +92,7 @@
                             </div>
                             <div class="col s12 m6 l3">
                                 <div class="icon-block">
-                                    <h2 class="center grey-text darken-4"><i class="material-icons">build</i></h2>
+                                    <h2 class="center grey-text darken-4"><i class="material-icons">business</i></h2>
                                     <p>Contamos con profesionales que buscan la excelencia, mediante una constante actualización y perfeccionamiento.</p>
                                 </div>
                             </div>
