--- a/netos/modules/header/header.html
+++ b/netos/modules/header/header.html
@@ -1,15 +1,9 @@
 <!DOCTYPE html>
-<!--
-To change this license header, choose License Headers in Project Properties.
-To change this template file, choose Tools | Templates
-and open the template in the editor.
--->
-<!DOCTYPE html>
 <html>
     <head>
     </head>
     <body>
-        <nav class="white z-depth-0" role="navigation ">
+        <nav class="grey lighten-5 z-depth-0" role="navigation ">
         <div class="nav-wrapper">
             <a id="logo-container" href="index.html" class="brand-logo"><img id="img-logo" class="responsive-img" src="img/Logos/General/Logo.png" /> <img id="img-logo" class="responsive-img" src="img/Logos/General/Nombre.png" /></a>
 
@@ -17,31 +11,40 @@ and open the template in the editor.
                 <li><a href="index.html">Inicio</a></li>
                 <li><a href="nosotros.html">Nosotros</a></li>
                 <li><a href="noticias.html">Noticias</a></li>
-                <li><a class="waves-effect waves-light btn dropdown-button orange lighten-1 grey-text text-darken-4 z-depth-0" href="mineria_landing.html" data-activates="mineria" >Mineria</a></li>
-                <li><a class="waves-effect waves-light btn dropdown-button cyan lighten-2 grey-text text-darken-4 z-depth-0" href="desarrollo_landing.html" data-activates="desarrollo">Desarrollo Tecnologico</a></li>
-                <li><a class="waves-effect waves-light btn dropdown-button light-green grey-text text-darken-4 z-depth-0" href="energia_landing.html" data-activates="energia">Energia</a></li>
+                <li><a class="waves-effect waves-light btn dropdown-button orange lighten-1 grey-text text-darken-4 z-depth-0" href="#" data-activates="mineria" >Mineria</a></li>
+                <li><a class="waves-effect waves-light btn dropdown-button cyan lighten-2 grey-text text-darken-4 z-depth-0" href="#" data-activates="desarrollo">Desarrollo Tecnologico</a></li>
+                <li><a class="waves-effect waves-light btn dropdown-button light-green grey-text text-darken-4 z-depth-0" href="#" data-activates="energia">Energia</a></li>
             </ul>
 
             <ul id="nav-mobile" class="side-nav">
-                <li class="active"><a href="index.html">Inicio</a></li>
+                <li><a href="index.html">Inicio</a></li>
                 <li><a href="nosotros.html">Nosotros</a></li>
                 <li><a href="noticias.html">Noticias</a></li>
                 <li><a class="orange-text text-lighten-1" href="mineria_landing.html">Mineria</a></li>
+                <li><a class="orange-text text-lighten-1" href="mineria_productos.html">Productos</a></li>
+                <li><a class="orange-text text-lighten-1" href="mineria_servicios.html">Servicios</a></li>
                 <li><a class="cyan-text text-lighten-2" href="desarrollo_landing.html">Desarrollo Tecnologico</a></li>
+                <li><a class="cyan-text text-lighten-2" href="desarrollo_productos.html"> Productos</a></li>
+                <li><a class="cyan-text text-lighten-2" href="desarrollo_servicios.html"> Servicios</a></li>
                 <li><a class="light-green-text" href="energia_landing.html">Energia</a></li>
+                <li><a class="light-green-text" href="energia_servicios.html">Servicios</a></li>
+                
             </ul>
             <a href="#" data-activates="nav-mobile" class="button-collapse"><i class="material-icons">menu</i></a>
         </div>
         
         <ul id='mineria' class='dropdown-content'>
+            <li><a class="orange-text" href="mineria_landing.html">Presentación</a></li>
             <li><a class="orange-text" href="mineria_productos.html">Productos</a></li>
             <li><a class="orange-text" href="mineria_servicios.html">Servicios</a></li>
         </ul>
         <ul id='desarrollo' class='dropdown-content'>
+            <li><a class="cyan-text" href="desarrollo_landing.html">Presentación</a></li>
             <li><a class="cyan-text" href="desarrollo_productos.html">Productos</a></li>
             <li><a class="cyan-text" href="desarrollo_servicios.html">Servicios</a></li>
         </ul>
         <ul id='energia' class='dropdown-content'>
+            <li><a class="light-green-text" href="energia_landing.html">Presentación</a></li>
             <li><a class="light-green-text" href="energia_servicios.html">Servicios</a></li>
         </ul>
         </nav>
@@ -49,9 +52,7 @@ and open the template in the editor.
     <script>
         $(".button-collapse").sideNav();
         $('.dropdown-button').dropdown({
-            belowOrigin: true,
-            hover: true,
-            constrainWidth: true
+            belowOrigin: true
         });
     </script>
 </html>
