--- a/netos/desarrollo_servicios.html
+++ b/netos/desarrollo_servicios.html
@@ -24,22 +24,97 @@
 </head>
 <body>
     <div id="nav-module" ></div>
-    </div>
-    <header class="relative">
-        <div class="slider">
-            <ul class="slides">
-                <li>
-                    <img class="responsive-img" src="img/Productos/automation_1.jpg" alt=""/>
-                    <div class="caption right-align">
-                      <h3></h3>
-                      <h5 class="light grey-text text-lighten-3"></h5>
-                    </div>
-                </li>
-            </ul>
-        </div>
-    </header>
 
-    <div id="servicio-module"></div>
+    <section>
+        <div class="container">
+            <div class="section">
+                <div class="card-panel show-card z-depth-2">
+                    <div class="row">
+                        <div class="col s12">
+                            <div class="icon-block center-align">
+                              <h5>Instrumentación, automatización y monitoreo de procesos</h5>
+                            </div>
+                        </div>
+                        <div class="col s12 l6">
+                            <ul class="collapsible z-depth-0" data-collapsible="expandable">
+                                <li>
+                                  <div class="collapsible-header"><i class="material-icons">build</i>Diseño e implementación de sistemas de monitoreo, automatización y control</div>
+                                </li>
+                                <li>
+                                  <div class="collapsible-header"><i class="material-icons">whatshot</i>Estimación del nivel de carga total JC</div>
+                                </li>
+                                <li>
+                                  <div class="collapsible-header active"><i class="material-icons">track_changes</i>Diseño e implementación de plataformas informáticas asociadas al monitoreo y control de procesos</div>
+                                  <div class="collapsible-body">
+                                      <span>
+                                            <div class="chip">
+                                                Sistemas web
+                                            </div>
+                                            <div class="chip">
+                                                Registro histórico de datos
+                                            </div>
+                                            <div class="chip">
+                                                Visualización en linea de datos
+                                            </div>
+                                      </span>
+                                  </div>
+                                </li>
+                                <li>
+                                  <div class="collapsible-header active"><i class="material-icons">done</i>Trabajos personalizados en instalaciones del cliente</div>
+                                  <div class="collapsible-body">
+                                      <span>
+                                            <div class="chip">
+                                                Levantamiento y documentación
+                                            </div>
+                                            <div class="chip">
+                                                Mantenimiento de sistemas
+                                            </div>
+                                      </span>
+                                  </div>
+                                </li>
+                                <li>
+                                  <div class="collapsible-header"><i class="material-icons">description</i>Estudios y análisis específicos del estado de sistemas de automatización y monitoreo</div>
+                                </li>
+                              </ul>
+                        </div>
+                        <div class="col l6 center-align hide-on-med-and-down">
+                            <img class="responsive-img" style="height: 641px;" src="img/Servicios/servicios-2.png" alt=""/>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="section">
+                <div class="card-panel show-card z-depth-2">
+                    <div class="row">
+                        <div class="col s12">
+                            <div class="icon-block center-align">
+                              <h5>Diseño y desarrollo tecnológico según requerimientos específicos</h5>
+                            </div>
+                        </div>
+                        <div class="col s12 l6">
+                            <ul class="collapsible z-depth-0" data-collapsible="expandable">
+                            <li>
+                              <div class="collapsible-header"><i class="material-icons">lightbulb_outline</i>Instrumentación innovadora según los requerimientos del proceso específico.</div>
+                            </li>
+                            <li>
+                              <div class="collapsible-header"><i class="material-icons">settings_input_composite</i>Equipos electrónicos de control según el proceso.</div>
+                            </li>
+                            <li>
+                              <div class="collapsible-header active"><i class="material-icons">dashboard</i>Plataformas informáticas de gestión de datos de procesos.</div>
+                            </li>
+                            <li>
+                              <div class="collapsible-header active"><i class="material-icons">settings</i>Diseño e implementación de equipos de comunicación industrial según requerimientos del cliente.</div>
+                            </li>  
+                        </ul>
+                        </div>
+                        <div class="col l6 center-align hide-on-med-and-down">
+                            <img class="responsive-img" style="max-height: 800px;" src="img/Servicios/servicios-3.png" alt=""/>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
 
     <div id="footer-module" ></div>
     
@@ -50,7 +125,6 @@
     <script>
          $(document).ready(function(){
             $('#nav-module').load('modules/header/header.html');
-            $('#servicio-module').load('modules/desarrollo/servicios.html');
             $('#footer-module').load('modules/footer/footer.html');
             $('.slider').slider({
             });
