--- a/netos/noticias.html
+++ b/netos/noticias.html
@@ -26,8 +26,8 @@
     <div id="nav-module" ></div>
     
     <div class="row ">
-        <div class="col s3 push-s9 m2 push-m10">
-            <a id="floating-button" class="btn-floating btn-large waves-effect waves-light red fade-in" href="#top"><i class="material-icons">arrow_upward</i></a>
+        <div class="col s3 push-s9 m2 push-m10" >
+            <a id="floating-button" class="btn-large waves-effect waves-light red fade-in" href="#top"><i class="material-icons">arrow_upward</i></a>
         </div>
     </div>
     <div id="top" class="scrollspy"></div>
@@ -271,6 +271,7 @@
             $('#footer-module').load('modules/footer/footer.html');
             $('.scrollspy').scrollSpy();
             $('#floating-button').pushpin({
+                offset: $(window).height() - 50
             });
             $('.modal').modal();
         });
