--- a/netos/modules/footer/footer.html
+++ b/netos/modules/footer/footer.html
@@ -3,37 +3,37 @@
     <head>
     </head>
     <body>
-    <footer class="page-footer grey darken-1">
-        <div class="row">
-            <div class="col l5 hide-on-med-and-down">
-                <img class="responsive-img" style="max-width: 400px; margin-top: 20px;" src="img/Logos/General/Logo_nombre_completo_blanco.png" alt=""/>
+        <div style="height: 10px;background: linear-gradient(to right, #FFB347, #75D2EF, #99DC74);"></div>
+        <footer style="background: #2B2B2B; height: 300px;">
+            <div class="row">
+                <div class="col s12 center-align white-text">
+                    <p>¿Redes sociales? <b>Siguenos</b> en</p> <a target="_new" href="https://www.linkedin.com/company/10398445"><img style="height: 24px;" src="img/Logos/Redes Sociales/linkedin-footer-full.png" alt=""/></a>
+                </div>
+                <div class="col s4 center-align">
+                    <img style="height: 50px;" src="img/Logos/General/Logo_nombre_completo_blanco.png" alt=""/>
+                </div>
+                <div class="col s4">
+                    <p class="white-text">Empresa</p>
+                    <ul style="font-size: 13px;line-height: 16px;">
+                        <li><a class="white-text text-lighten-3" href="index.html">Inicio</a></li>
+                        <li><a class="white-text text-lighten-3" href="nosotros.html">Nosotros</a></li>
+                        <li><a class="orange-text text-lighten-3" href="mineria_landing.html">Netos Mineria</a></li>
+                        <li><a class="cyan-text text-lighten-3" href="desarrollo_landing.html">Netos Desarrollo Tecnologico</a></li>
+                        <li><a class="light-green-text text-lighten-3" href="energia_landing.html">Netos Energia</a></li>
+                    </ul>
+                </div>
+                <div class="col s4">
+                    <p class="white-text">Contacto</p>
+                    <h5 class="white-text">(+56) 32 2652982</h5>
+                    <h6 class="white-text">contacto@netos.cl</h6>
+                </div>
+                <div class="col s12 center-align">
+                    <div class="container">
+                        <div class="divider"></div>
+                        <p class="white-text" style="font-size: 12px;">Hecho con <a class="red-text text-lighten-3" href="http://materializecss.com">Materialize</a>  @ 2017 Todos los derechos reservados <span class="white-text"> NETOS S.A. </span></p>
+                    </div>
+                </div>
             </div>
-            <div class="col l3 m4 push-m1 hide-on-small-only">
-                <h5 class="white-text">Empresa</h5>
-                <ul>
-                    <li><a class="white-text text-lighten-3" href="index.html">Inicio </a></li>
-                    <li><a class="white-text text-lighten-3" href="nosotros.html">Nosotros</a></li>
-                    <li><a class="orange-text text-lighten-3" href="mineria_lanfing.html">Netos Mineria</a></li>
-                    <li><a class="cyan-text text-lighten-3" href="desarrollo_landing.html">Netos Desarrollo Tecnologico</a></li>
-                    <li><a class="light-green-text text-lighten-3" href="energia_landing.html">Netos Energia</a></li>
-                </ul>
-            </div>
-            <div class="col s12 l3 m4">
-                <h5 class="white-text">Contacto</h5>
-                <h5 class="white-text">(+56) 32 2652982</h5>
-                <h6 class="white-text">contacto@netos.cl</h6>
-            </div>
-            <div class="col s12 l1 m4">
-                <a target="_new" href="https://www.linkedin.com/company/10398445"><img src="img/Logos/Redes Sociales/linkedin-footer_logo.png" alt=""/></a>
-            </div>
-  
-        </div>
-      
-      <div class="footer-copyright">
-        <div class="container center-align">
-            Hecho con <a class="red-text text-lighten-3" href="http://materializecss.com">Materialize</a>  @ 2017 Todos los derechos reservados <span class="white-text"> NETOS S.A. </span>
-        </div>
-      </div>
-    </footer>
+        </footer>
     </body>
 </html>
