--- a/netos/nosotros.html
+++ b/netos/nosotros.html
@@ -38,25 +38,16 @@
             <!--   Icon Section   -->
                 <div class="row">
                     <div class="col s12">
-                        <h2 class="center">Quienes somos</h2>
-                        <div class="divider"></div>
-                        <div class="icon-block">
-                          <h2 class="center grey-text darken-4"><i class="material-icons">group</i></h2>
-                          <p>Somos una empresa que desarrolla soluciones operacionales a distintas áreas industriales, siendo nuestro foco principal el rubro minero. Estas soluciones son “a medida y escalables”, en donde cada uno de quienes componen este equipo entrega su máxima experiencia en las áreas de instrumentación, control automático, metalurgia, procesos químicos, informática, sistemas eléctricos de potencia y electrónica de potencia.</p>
-                        </div>
-                        <div class="divider"></div>
+                        <h3 class="center">Somos</h3>
+                        <p>Una empresa que desarrolla soluciones operacionales a distintas áreas industriales, siendo nuestro foco principal el rubro minero. Estas soluciones son “a medida y escalables”, en donde cada uno de quienes componen este equipo entrega su máxima experiencia en las áreas de instrumentación, control automático, metalurgia, procesos químicos, informática, sistemas eléctricos de potencia y electrónica de potencia.</p>
                     </div>
                     <div class="col s12 m6" >
-                        <div class="card-panel">
-                            <h3 class="center">Misión</h3>
-                            <p>Nuestra misión es proveer productos y servicios tecnológicos innovadores con una propuesta integral que aporte valor a nuestros clientes.</p>
-                        </div>
+                        <h3 class="center">Misión</h3>
+                        <p>Nuestra misión es proveer productos y servicios tecnológicos innovadores con una propuesta integral que aporte valor a nuestros clientes.</p>
                     </div>
                     <div class="col s12 m6">
-                        <div class="card-panel">
-                            <h3 class="center">Visión</h3>
-                            <p>Queremos ser un referente en innovación tecnológica, posicionando nuestros productos y servicios tanto en el mercado nacional como en el internacional, permitiendo que las nuevas tecnologías puedan traer beneficios a nuestros clientes.</p>
-                        </div>
+                        <h3 class="center">Visión</h3>
+                        <p>Queremos ser un referente en innovación tecnológica, posicionando nuestros productos y servicios tanto en el mercado nacional como en el internacional, permitiendo que las nuevas tecnologías puedan traer beneficios a nuestros clientes.</p>
                     </div>
                        
                     <div class="col s12">
