--- a/netos/energia_landing.html
+++ b/netos/energia_landing.html
@@ -25,58 +25,30 @@
 <body>
     <div id="nav-module" ></div>
        <section id="presentacion" class="showcase">
-        <header class="relative">
-            <div class="container">
-                <div class="row">
-                    <div class="col s12 center-align">
-                        <img class="responsive-img" style="max-height: 340px;max-width: 340px; padding-top: 50px;" src="img/Logos/Agricultura/Logo_nombre.png" alt=""/>
+            <header class="relative">
+                <div class="container">
+                    <div class="row">
+                        <div id="mineria-landing" class="col s12 center-align">
+                            <img class="responsive-img" style="max-height: 340px;max-width: 340px; padding-top: 50px;" src="img/Logos/Agricultura/Logo_nombre.png" alt=""/>
+                        </div>
                     </div>
                 </div>
-            </div>
-        </header>
-        <div class="container">
-            <div class="section">
-                <div class="row">
-                    <div class="col s12">
-                        <h2 class="center"></h2>
-                        <div class="divider"></div>
-                        <div class="icon-block">
-                          <h2 class="center grey-text darken-4"><i class="material-icons">group</i></h2>
-                          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. In ut tempus lorem, at porttitor diam. 
-                              Nulla dapibus ex sed erat sodales, dictum sagittis lorem ultricies. Cras tincidunt lacus porttitor 
-                              elit vestibulum, sed interdum sapien tempus. Ut at tempor urna. Duis viverra imperdiet augue, non 
-                              gravida orci. Aenean varius dapibus diam, id volutpat sem molestie in. Mauris tellus turpis, luctus 
-                              id sodales et, tempor ut lectus.</p>
+            </header>
+            <div style="height: 5px;background: linear-gradient(to right, #8BC63E, #C6E257);"></div>
+            <div class="container">
+                <div class="section">
+                    <div class="row">
+                        <div class="col s12">
+                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. In ut tempus lorem, at porttitor diam. 
+                                Nulla dapibus ex sed erat sodales, dictum sagittis lorem ultricies. Cras tincidunt lacus porttitor 
+                                elit vestibulum, sed interdum sapien tempus. Ut at tempor urna. Duis viverra imperdiet augue, non 
+                                gravida orci. Aenean varius dapibus diam, id volutpat sem molestie in. Mauris tellus turpis, luctus 
+                                id sodales et, tempor ut lectus.</p>
                         </div>
                     </div>
                 </div>
             </div>
-        </div>
-        <section>
-            <div class="row">
-                <div class="col s12 l6 center-align">
-                    <ul class="collapsible disabled z-depth-0" data-collapsible="expandable" style="">
-                        <li>
-                            <div class="collapsible-header active">Productos</div>
-                            <div class="collapsible-body">
-                                Maecenas ultricies nisl a mi viverra sollicitudin. Quisque nec lacus sit amet turpis pellentesque aliquam. Sed lacinia pellentesque consectetur. Nunc ullamcorper, metus sed condimentum feugiat, lorem est imperdiet mi, sed consectetur felis neque sed metus. Vivamus ullamcorper, orci vel blandit molestie, sapien ligula cursus mi, in feugiat mauris nulla non nibh. 
-                            </div>
-                        </li>
-                    </ul>
-                </div>
-                <div class="col s12 l6 center-align">
-                    <ul class="collapsible disabled z-depth-0" data-collapsible="expandable" style="">
-                        <li>
-                            <div class="collapsible-header active">Servicios</div>
-                            <div class="collapsible-body">
-                                Vivamus convallis eros in purus malesuada, ac pulvinar neque fringilla. Aenean a lorem tincidunt, congue ligula vitae, interdum enim. Maecenas efficitur placerat est. In hac habitasse platea dictumst.
-                            </div>
-                        </li>
-                    </ul>
-                </div>
-            </div>
         </section>
-    </section>
     
     <div id="footer-module" ></div>
      
